--- a/index.html
+++ b/index.html
@@ -7,14 +7,80 @@
     <link rel="stylesheet" href="./css/jennifer.css">
     <link rel="stylesheet" href="./css/maria.css">
     <link rel="stylesheet" href="./css/yeimmi.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <title>deezer</title>
 </head>
 <body>
     <header class="">
 
     </header>
-    <main class="">
-
+    <main>
+        <section class="porque">
+            <h2 class="tit">¿Por qué elegir Deezer?</h2>
+                <div class="par">
+                    <p>Haz stream de millones de canciones, podcasts y canales de radio. Accede a nuestra app de música desde todos tus dispositivos. Descubre las funciones básicas y exclusivas incorporadas.
+                    </p>
+                </div>    
+            <button name="redirect" class="button1" onClick="redirect()"><span>DESCUBRE TODAS NUESTRAS FUNCIONES</span></button>
+                <script type="text/javascript">
+                function redirect()
+                {
+                window.location.href="https://features.deezer.com/es/?_gl=1*1so0zre*_ga*MTc0NTQyOTg1NC4xNjY0OTk5MTMx*_ga_71WQ7Y8JLG*MTY2NTQzMzY5NS44LjEuMTY2NTQzMzc5OS4wLjAuMA..";
+                }
+                </script>
+            <h3 class="sub">Vive la experiencia de Flow, solo en Deezer</h3>
+                <div class="par1">
+                    <p>Utilizando el poder de la IA, Flow te entrega un mix infinito de todos tus favoritos y nuevos descubrimientos en función de tu estado de ánimo.</p>
+                </div>
+            <img src="./img/flow.jpg">
+            <button name="redirect" class="button2" onClick="redirect()">DESCUBRE FLOW
+                </button>
+                    <script type="text/javascript">
+                    function redirect()
+                    {
+                    window.location.href="https://features.deezer.com/es/flow/?_gl=1*hlukys*_ga*MTc0NTQyOTg1NC4xNjY0OTk5MTMx*_ga_71WQ7Y8JLG*MTY2NTQzMzY5NS44LjEuMTY2NTQzMzcyOS4wLjAuMA..";
+                    }
+                    </script>
+            <h3 class="sub">¿No tienes internet? No hay problema</h3>
+                <div class="par2">
+                <p>Descarga tu música y tus podcasts para escucharlos sin conexión y ahorrar tus datos.
+                </p>    
+                </div>
+                <img src="https://e-cdn-files.dzcdn.net/cache/images/unlogged/homepage/hybrid/offline.da782944d5e0283b10567c5d75af4595.svg">
+                <button name="redirect" class="button3" onClick="redirect()">ESCUCHAR SIN CONEXIÓN
+                </button>
+                    <script type="text/javascript">
+                    function redirect()
+                    {
+                    window.location.href="https://features.deezer.com/es/offline/";
+                    }
+                    </script>
+            <h2 class="tit1">El catálogo más grande de audio en streaming</h2>
+                <div class="par2">
+                <p>Disfruta del acceso a un catálogo de más de 90 millones de canciones, playlists, podcasts y canales de radio. Descubre nuevos lanzamientos de música y álbumes de moda para crear tu propia biblioteca.</p>    
+                </div>
+            <section>
+                <video src="https://www.deezer.com/mx/album/356351007" ></video>
+                <video src="https://www.deezer.com/mx/album/1019717"></video>
+                <video src="https://www.deezer.com/mx/album/316164367"></video>
+                <video src="https://www.deezer.com/mx/album/331972517"></video>
+                <video src="https://www.deezer.com/mx/album/273425942"></video>
+            </section>
+            <button name="redirect" class="button" onClick="redirect()">EXPLORA NUESTRO CATÁLOGO</button>
+                <script type="text/javascript">
+                function redirect()
+                {
+                window.location.href="https://www.deezer.com/mx/channels/explore";
+                }
+                </script>
+        </section>   
     </main>
     <footer class="">
 
