Subo evidencia de trabajo valen

--- a/index.html
+++ b/index.html
@@ -7,15 +7,78 @@
     <link rel="stylesheet" href="./css/jennifer.css">
     <link rel="stylesheet" href="./css/maria.css">
     <link rel="stylesheet" href="./css/yeimmi.css">
-    <title>Document</title>
+    <title>Deezer|Landing Page Grupal</title>
 </head>
 <body>
-    <header class="">
 
+    <header class="logo">
+        <button class="bu1">Activar la oferta de mi socio ><img src="img/Tigo.png" alt=""></button>
+        <img src="img/logodeezer.png" alt="">
+        <button href="#" class="bu2">INICIAR SESION </button>
     </header>
+
+    <b><h1>The Power of Music</h1></b>
+
+        <div class="container">
+            <div class="morado">
+            <div class="top">            
+                    <h3>deezer Free</h3>
+                    <p>Musica, podcasts y radio, ademas de recomendaciones hechas para ti.</p>
+                    <button class="bu3">registrate gratis</button>
+                    <p>No se requiere pago.</p>
+                    <a href="">Mas informacion</a> <br>
+
+            </div>
+            </div>
+
+            <div class="naranja">
+                <div class="top">
+                    <h3>deezer Family</h3>
+                    <p>Musica para todos.</p>
+                    <p>obten 6 cuentas individuales, todas con los beneficios de Deezer Premium,incluyendo sonido de alta fidelidad.</p>
+                    <p>Escucha simultaneamente en varios dispositivos.</p>
+                    <button class="bu4">pruebalo gratis</button>
+                    <h1> 1 mes gratis</h1>
+                    <h4>luego $27.900/mes</h4>
+                    <p>sin compropmiso,puedes cancelar cuando quieras</p>
+                    <a href="">Mas informacion</a> <br>
+                </div>
+            </div>
+
+            <div class="negro">
+                <div class="top">
+                    <h3>Ofertas de socios</h3>
+                    <img src="img/Tigo.png" alt=""></button><br>
+                    <button class="bu5">activar la oferta de mi socio</button><br>
+                </div>
+            </div>
+
+            <div class="azul_claro">
+                <div class="top">
+                    <h3>deezer Premium</h3>
+                    <p>Elige y escucha cualquier cancion sin anuncios y ademas descargar tus favoritos y escuchalos sin conexion.</p>
+                    <p>Disfruta de sonido de alta fiddelidad y escucha eb todos tus dispositivos.</p>
+                    <button class="bu6">pruebalo gratis</button>
+                    <h1> 1 mes gratis</h1>
+                    <h4>luego $17.900/mes</h4>
+                    <p>sin compromiso, puedes cancelar cuando quieras</p>
+                    <a href="">Mas informacion</a> <br>
+                </div>
+            </div>
+            <div class="Boton1">
+                <button class="bu7">Descuento anual</button>
+            </div><br>
+            <div class="Boton1">
+                <button class="bu7">Descuento anual</button>
+            </div>
+    
+        </div>
+
+
     <main class="">
 
     </main>
+    
     <footer class="">
 
     </footer>
