--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="porque">
             <h2 class="tit">¿Por qué elegir Deezer?</h2>
                 <div class="par">
-                    <p>Haz stream de millones de canciones, podcasts y canales de radio. Accede a nuestra app de música desde todos tus dispositivos. Descubre las funciones básicas y exclusivas incorporadas.
+                    <p>Haz stream de millones de canciones, podcasts y canales de radio. Accede a <br>nuestra app de música desde todos tus dispositivos. Descubre las funciones <br>básicas y exclusivas incorporadas.
                     </p>
                 </div>    
             <button name="redirect" class="button1" onClick="redirect()"><span>DESCUBRE TODAS NUESTRAS FUNCIONES</span></button>
@@ -36,10 +36,10 @@
                 }
                 </script>
             <h3 class="sub">Vive la experiencia de Flow, solo en Deezer</h3>
-                <div class="par1">
-                    <p>Utilizando el poder de la IA, Flow te entrega un mix infinito de todos tus favoritos y nuevos descubrimientos en función de tu estado de ánimo.</p>
+                <div class="par">
+                    <p>Utilizando el poder de la IA, Flow te entrega un mix infinito de todos tus favoritos y <br>nuevos descubrimientos en función de tu estado de ánimo.</p>
                 </div>
-            <img src="./img/flow.jpg">
+            <img src="./css/images/flow.jpg">
             <button name="redirect" class="button2" onClick="redirect()">DESCUBRE FLOW
                 </button>
                     <script type="text/javascript">
@@ -49,8 +49,8 @@
                     }
                     </script>
             <h3 class="sub">¿No tienes internet? No hay problema</h3>
-                <div class="par2">
-                <p>Descarga tu música y tus podcasts para escucharlos sin conexión y ahorrar tus datos.
+                <div class="par1">
+                <p>Descarga tu música y tus podcasts para escucharlos sin conexión y ahorrar tus<br> datos.
                 </p>    
                 </div>
                 <img src="https://e-cdn-files.dzcdn.net/cache/images/unlogged/homepage/hybrid/offline.da782944d5e0283b10567c5d75af4595.svg">
@@ -63,17 +63,42 @@
                     }
                     </script>
             <h2 class="tit1">El catálogo más grande de audio en streaming</h2>
-                <div class="par2">
-                <p>Disfruta del acceso a un catálogo de más de 90 millones de canciones, playlists, podcasts y canales de radio. Descubre nuevos lanzamientos de música y álbumes de moda para crear tu propia biblioteca.</p>    
+                <div class="par1">
+                <p>Disfruta del acceso a un catálogo de más de 90 millones de canciones, playlists, <br>podcasts y canales de radio. Descubre nuevos lanzamientos de música y álbumes <br>de moda para crear tu propia biblioteca.</p>    
                 </div>
-            <section>
-                <video src="https://www.deezer.com/mx/album/356351007" ></video>
-                <video src="https://www.deezer.com/mx/album/1019717"></video>
-                <video src="https://www.deezer.com/mx/album/316164367"></video>
-                <video src="https://www.deezer.com/mx/album/331972517"></video>
-                <video src="https://www.deezer.com/mx/album/273425942"></video>
+            <section class="videos">
+                <div>
+                    <a href="https://www.deezer.com/mx/album/356351007" target="_self" ><img src="./css/images/feid.jpg" class="v3"></a>
+                    <div class="pie"> 
+                    <p> FELIZ CUMPLEAÑOS FERXXO TE<br>PIRATEAMOS EL ÁLBUM<br>Feid</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="pie"> 
+                    <a href="https://www.deezer.com/mx/album/359058387" target="_self"><img src="./css/images/oso.jpg" class="v2"></a>
+                    <p> Ozutochi<br>Ozuna</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="pie"> 
+                    <a href="https://www.deezer.com/mx/album/316164367" target="_self"><img src="./css/images/cora.jpg" class="v1"></a>
+                    <p> Un Verano Sin Ti<br>Bad Bunny</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="pie"> 
+                    <a href="https://www.deezer.com/mx/album/331972517" target="_self"><img src="./css/images/bandaa.jpg"  class="v2"></a>
+                    <p>Se Va Formando<br>La Banda Del 5</p>
+                    </div>
+                </div>
+                <div >
+                    <div class="pie"> 
+                    <a href="https://www.deezer.com/mx/album/382011" target="_self"><img src="./css/images/soda.jpg" class="v1"></a>
+                    <p> Comfort y Musica Para Volar<br>Soda Stereo</p>
+                    </div>
+                </div>
             </section>
-            <button name="redirect" class="button" onClick="redirect()">EXPLORA NUESTRO CATÁLOGO</button>
+            <button name="redirect" class="button4" onClick="redirect()">EXPLORA NUESTRO CATÁLOGO</button>
                 <script type="text/javascript">
                 function redirect()
                 {
