--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b59af0f90f.js" crossorigin="anonymous"></script>
     <title>deezer</title>
 </head>
 <body>
@@ -68,7 +69,8 @@
                 </div>
             <section class="videos">
                 <div>
-                    <a href="https://www.deezer.com/mx/album/356351007" target="_self" ><img src="./css/images/feid.jpg" class="v3"></a>
+                    <a href="https://www.deezer.com/mx/album/356351007" target="_top"><i class="fa-solid fa-play"><img src="./css/images/feid.jpg" class="v3"></i></a>
+                    
                     <div class="pie"> 
                     <p> FELIZ CUMPLEAÑOS FERXXO TE<br>PIRATEAMOS EL ÁLBUM<br>Feid</p>
                     </div>
@@ -87,7 +89,7 @@
                 </div>
                 <div>
                     <div class="pie"> 
-                    <a href="https://www.deezer.com/mx/album/331972517" target="_self"><img src="./css/images/bandaa.jpg"  class="v2"></a>
+                    <a href="https://www.deezer.com/mx/album/331972517" target="_self"><img src="./css/images/bandaa.jpg" class="v2"></a>
                     <p>Se Va Formando<br>La Banda Del 5</p>
                     </div>
                 </div>
