--- a/index.html
+++ b/index.html
@@ -6,192 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/jennifer.css">
     <link rel="stylesheet" href="./css/maria.css">
     <link rel="stylesheet" href="./css/yeimmi.css">
-    <script src="https://kit.fontawesome.com/b59af0f90f.js" crossorigin="anonymous"></script>
-    <title>Deezer|Landing Page Grupal</title>
+    <title>Document</title>
 </head>
 
 <body>
+    <header class="">
 
-    <header class="logo">
-        <button class="bu1">Activar la oferta de mi socio ><img src="img/Tigo.png" alt=""></button>
-        <img src="img/logodeezer.png" alt="">
-        <button href="#" class="bu2">INICIAR SESION </button>
     </header>
-
-    <b><h1>The Power of Music</h1></b>
-    <div class="mor">          
-                <p>ghghghj</p>
-                <p>hsajchfksdfsh</p></div>
-    <div class="container">
-            <div class="morado">
-            <div class="top">            
-                    <h3>deezer Free</h3>
-                    <p>Música, podcasts y radio, además de recomendaciones hechas para ti.</p>
-                    <button class="bu3">registrate gratis</button>
-                    <p><br>No se requiere pago.</p>
-                    <a href="">Mas informacion</a> <br>
-            </div>
-            </div>
-
-            <div class="naranja">
-                <div class="top">
-                    <h3>deezer Family</h3>
-                    <p><br>Musica para todos.</p>
-                    <p>Obtén 6 cuentas individuales, todas con los beneficios de Deezer Premium,incluyendo sonido de alta fidelidad.</p>
-                    <p><br>Escucha simultaneamente en varios dispositivos.</p>
-                    <button class="bu4">pruebalo gratis</button>
-                    <h1><br>1 mes gratis</h1>
-                    <h4>luego $27.900/mes</h4>
-                    <p>sin compropmiso,puedes cancelar cuando quieras</p>
-                    <a href="">Mas informacion</a> <br>
-                </div>
-            </div>
-
-            <div class="negro">
-                <div class="top">
-                    <h3>Ofertas de socios</h3>
-                    <img src="img/Tigo.png" alt=""></button><br>
-                    <button class="bu5">activar la oferta de mi socio</button><br>
-                </div>
-            </div>
-
-            <div class="azul_claro">
-                <div class="top">
-                    <h3>deezer Premium</h3>
-                    <p>Elige y escucha cualquier canción sin anuncios y además, descarga tus favoritos y escúchalos sin conexión.</p>
-                    <p>Disfruta de sonido de alta fiddelidad y escucha eb todos tus dispositivos.</p>
-                    <button class="bu6">pruebalo gratis</button>
-                    <h1> 1 mes gratis</h1>
-                    <h4>luego $17.900/mes</h4>
-                    <p>sin compromiso, puedes cancelar cuando quieras</p>
-                    <a href="">Mas informacion</a> <br>
-                </div>
-            </div>
-
-            <div class="Boton1">
-                <select href="#" class="bu7"><option>Descuento anual</option><span class="caret"></span>
-                    <li><a href=""></a></li>
-                    <div class="des1">
-                        <div class="top">
-                            <h2>deezer Premium Anual</h2>
-                            <p>Todos los beneficios de Deezer Premium a un precio anual con descuento.</p>
-                            <button class="color1">suscribirse</button>
-                            <h1>25% de descuento</h1>
-                            <p>$13.425/mes al pagar anualmente</p>
-                            <p>Un compromiso por 1 año.</p>
-                            <a href="">Mas informacion</a> <br>
-                        </div>
-                    </div>
-                </select>
-
-            </div><br>
-
-            <div class="Boton2">
-                <select href="#" class="bu8"><option>Descuento para estudiantes</option>
-                    <div class="des1">
-                        <div class="top">
-                            <h2>deezer Student</h2>
-                            <p>Todos los beneficios de Deezer Premium a mitad de precio para aprovechar al maximo tu vida de precio para aprovechar al maximo tu vida de estudiante.</p>
-                            <button class="color1">pruebalo gratis</button>
-                            <h1>1 mes gratis</h1>
-                            <p>luego $8.450/mes.</p>
-                            <p>Sin compromiso, puedes cancelar cuando quieras.</p>
-                            <a href="">Mas informacion</a> <br>
-                        </div>
-                    </div>  
-                </select>
-        </div>
-        <section class="porque">
-            <h2 class="tit">¿Por qué elegir Deezer?</h2>
-                <div class="par">
-                    <p>Haz stream de millones de canciones, podcasts y canales de radio. Accede a <br>nuestra app de música desde todos tus dispositivos. Descubre las funciones <br>básicas y exclusivas incorporadas.
-                    </p>
-                </div>    
-            <button name="redirect" class="button1" onClick="redirect()"><span>DESCUBRE TODAS NUESTRAS FUNCIONES</span></button>
-                <script type="text/javascript">
-                function redirect()
-                {
-                window.location.href="https://features.deezer.com/es/?_gl=1*1so0zre*_ga*MTc0NTQyOTg1NC4xNjY0OTk5MTMx*_ga_71WQ7Y8JLG*MTY2NTQzMzY5NS44LjEuMTY2NTQzMzc5OS4wLjAuMA..";
-                }
-                </script>
-            <h3 class="sub">Vive la experiencia de Flow, solo en Deezer</h3>
-                <div class="par">
-                    <p>Utilizando el poder de la IA, Flow te entrega un mix infinito de todos tus favoritos y <br>nuevos descubrimientos en función de tu estado de ánimo.</p>
-                </div>
-            <img src="./css/images/flow.jpg">
-            <button name="redirect" class="button2" onClick="redirect()">DESCUBRE FLOW
-                </button>
-                    <script type="text/javascript">
-                    function redirect()
-                    {
-                    window.location.href="https://features.deezer.com/es/flow/?_gl=1*hlukys*_ga*MTc0NTQyOTg1NC4xNjY0OTk5MTMx*_ga_71WQ7Y8JLG*MTY2NTQzMzY5NS44LjEuMTY2NTQzMzcyOS4wLjAuMA..";
-                    }
-                    </script>
-            <h3 class="sub">¿No tienes internet? No hay problema</h3>
-                <div class="par1">
-                <p>Descarga tu música y tus podcasts para escucharlos sin conexión y ahorrar tus<br> datos.
-                </p>    
-                </div>
-                <img src="https://e-cdn-files.dzcdn.net/cache/images/unlogged/homepage/hybrid/offline.da782944d5e0283b10567c5d75af4595.svg">
-                <button name="redirect" class="button3" onClick="redirect()">ESCUCHAR SIN CONEXIÓN
-                </button>
-                    <script type="text/javascript">
-                    function redirect()
-                    {
-                    window.location.href="https://features.deezer.com/es/offline/";
-                    }
-                    </script>
-            <h2 class="tit1">El catálogo más grande de audio en streaming</h2>
-                <div class="par1">
-                <p>Disfruta del acceso a un catálogo de más de 90 millones de canciones, playlists, <br>podcasts y canales de radio. Descubre nuevos lanzamientos de música y álbumes <br>de moda para crear tu propia biblioteca.</p>    
-                </div>
-            <section class="videos">
-                <div>
-                    <a href="https://www.deezer.com/mx/album/356351007" target="_top"><i class="fa-solid fa-play"><img src="./css/images/feid.jpg" class="v3"></i></a>
-                    
-                    <div class="pie"> 
-                    <p> FELIZ CUMPLEAÑOS FERXXO TE<br>PIRATEAMOS EL ÁLBUM<br>Feid</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="pie"> 
-                    <a href="https://www.deezer.com/mx/album/359058387" target="_self"><img src="./css/images/oso.jpg" class="v2"></a>
-                    <p> Ozutochi<br>Ozuna</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="pie"> 
-                    <a href="https://www.deezer.com/mx/album/316164367" target="_self"><img src="./css/images/cora.jpg" class="v1"></a>
-                    <p> Un Verano Sin Ti<br>Bad Bunny</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="pie"> 
-                    <a href="https://www.deezer.com/mx/album/331972517" target="_self"><img src="./css/images/bandaa.jpg" class="v2"></a>
-                    <p>Se Va Formando<br>La Banda Del 5</p>
-                    </div>
-                </div>
-                <div >
-                    <div class="pie"> 
-                    <a href="https://www.deezer.com/mx/album/382011" target="_self"><img src="./css/images/soda.jpg" class="v1"></a>
-                    <p> Comfort y Musica Para Volar<br>Soda Stereo</p>
-                    </div>
-                </div>
-            </section>
-            <button name="redirect" class="button4" onClick="redirect()">EXPLORA NUESTRO CATÁLOGO</button>
-                <script type="text/javascript">
-                function redirect()
-                {
-                window.location.href="https://www.deezer.com/mx/channels/explore";
-                }
-                </script>
-        </section>  
-        <section class="home">
+    <main class="home">
         <section class="section section--small home__novedades">
             <h4 class="home__novedades_home__novedades-subtitle"> NOVEDADES </h4>
             <h3 class="home__novedades-title">Importa tu biblioteca de música a Deezer</h3>
@@ -199,7 +26,7 @@
                 streaming de música a Deezer con un solo clic.
             </p>
             <img src="./imagenes/icon-novedades.svg" alt="icono novedades" class="home__novedades-image">
-            <a href="https://features.deezer.com/es/transfer-playlist/?_gl=1*7vyswh*_ga*MTc0NTQyOTg1NC4xNjY0OTk5MTMx*_ga_71WQ7Y8JLG*MTY2NTUyNjUyMC4xNi4wLjE2NjU1MjY1MjAuMC4wLjA." class="btn btn-white home__novedades-button" target="_top">Mas Información</a>
+            <a href="#" class="btn btn-white home__novedades-button">Mas Informacion</a>
         </section>
         <section class="section section--small home__faq">
             <h3 class="home__faq-title">FAQ</h3>
@@ -260,6 +87,7 @@
                         playlists favoritas.</p>
                 </details>
             </div>
+
             <p class="parrafofinal" >
                 Estas ofertas son sin compromiso, lo que significa que puedes cancelar tu suscripción en cualquier
                 momento. Estas ofertas solo están disponibles para usuarios que no tengan actualmente o hayan tenido una
@@ -421,6 +249,8 @@
 
             </div>
         </div>
-    </footer> 
-</body>     
-</html>    
+    </footer>
+</div>
+</body>
+
+</html>
