Subo ultimas modificaciones

--- a/index.html
+++ b/index.html
@@ -11,10 +11,131 @@
     <link rel="stylesheet" href="./css/jennifer.css">
     <link rel="stylesheet" href="./css/maria.css">
     <link rel="stylesheet" href="./css/yeimmi.css">
-    <title>Document</title>
+    <title>Dezeer|Landing Page Grupal</title>
 </head>
 
 <body>
+
+    <header class="logo">
+        <button class="bu1">Activar la oferta de mi socio ><img src="img/Tigo.png" alt=""></button>
+        <img src="img/logodeezer.png" alt="">
+        <button href="#" class="bu2">INICIAR SESION </button>
+    </header>
+
+    <h1>The Power of Music</h1>
+    <div class="mor">          
+                <p>ghghghj</p>
+                <p>hsajchfksdfsh</p></div>
+    <div class="container">
+            <div class="morado">
+            <div class="top">  
+                <div class="arreglo1">         
+                    <h1> deezer Free</h1>
+                </div> 
+                <div class="arreglo2">
+                    <p>Música, podcasts y radio, además de recomendaciones hechas para ti.</p>
+                </div>    
+                    <button class="bu3">registrate gratis</button>
+
+                    <div class="arreglo3">
+                        <p>No se requiere pago.</p>
+                    </div>
+
+                    <a href="">Mas informacion</a> <br>
+            </div>
+            </div>
+
+            <div class="naranja">
+                <div class="top">
+                    <div class="arreglo1">
+                        <h1> dezeer Family</h1>
+                    </div>
+                    <div class="arreglo4">
+                        <p>Musica para todos.</p>
+                        <p>obten 6 cuentas individuales, todas con los beneficios de Deezer Premium,incluyendo sonido de alta fidelidad.</p>
+                        <p>Escucha simultáneamente en varios dispositivos.</p>
+                    </div>
+                    <button class="bu4">pruebalo gratis</button>
+                    <div class="arreglo5">
+                        <h1> 1 mes gratis</h1>
+                    </div>
+                    <div class="arreglo6">
+                        <h4>luego $27.900/mes</h4>
+                    </div>
+                    <div class="arreglo7">
+                        <p>sin compropmiso,puedes cancelar cuando quieras</p>
+                    </div>
+                    <a href="">Mas informacion</a> <br>
+                </div>
+            </div>
+
+            <div class="negro">
+                <div class="top">
+                    <div class="arreglo8">
+                        <h3>Ofertas de socios</h3>
+                    </div>
+                    <img src="img/Tigo.png" alt=""></button><br>
+                    <button class="bu5">activar la oferta de mi socio</button><br>
+                </div>
+            </div>
+
+            <div class="azul_claro">
+                <div class="top">
+                    <div class="arreglo9">
+                        <h1> deezer Premium</h1>
+                    </div>
+                    <div class="arreglo10">
+                        <p>Elige y escucha cualquier canción sin anuncios y además, descarga tus favoritos y escúchalos sin conexión.</p>
+                        <p>Disfruta de sonido de alta fiddelidad y escucha eb todos tus dispositivos.</p>
+                    </div>
+                    <button class="bu6">pruebalo gratis</button>
+                    <div class="arreglo11">
+                        <h1> 1 mes gratis</h1>
+                    </div>
+                    <div class="arreglo12">
+                    <h4>luego $17.900/mes.</h4>
+                    </div>
+                    <div class="arreglo13">
+                    <p>sin compromiso, puedes cancelar cuando quieras</p>
+                    </div>
+                    <a href="">Mas informacion</a> <br>
+                </div>
+            </div>
+
+            <div class="Boton1">
+                <select href="#" class="bu7"><option>Descuento anual</option><span class="caret"></span>
+                    <li><a href=""></a></li>
+                    <div class="des1">
+                        <div class="top">
+                            <h2>deezer Premium Anual</h2>
+                            <p>Todos los beneficios de Deezer Premium a un precio anual con descuento.</p>
+                            <button class="color1">suscribirse</button>
+                            <h1>25% de descuento</h1>
+                            <p>$13.425/mes al pagar anualmente</p>
+                            <p>Un compromiso por 1 año.</p>
+                            <a href="">Mas informacion</a> <br>
+                        </div>
+                    </div>
+                </select>
+
+            </div><br>
+
+            <div class="Boton2">
+                <select href="#" class="bu8"><option>Descuento para estudiantes</option>
+                    <div class="des1">
+                        <div class="top">
+                            <h2>deezer Student</h2>
+                            <p>Todos los beneficios de Deezer Premium a mitad de precio para aprovechar al maximo tu vida de precio para aprovechar al maximo tu vida de estudiante.</p>
+                            <button class="color1">pruebalo gratis</button>
+                            <h1>1 mes gratis</h1>
+                            <p>luego $8.450/mes.</p>
+                            <p>Sin compromiso, puedes cancelar cuando quieras.</p>
+                            <a href="">Mas informacion</a> <br>
+                        </div>
+                    </div>  
+                </select>
+        </div>
+<br>
     <header class="">
 
     </header>
